# complexqtstructure

./: CMakeLists.txt  README.md  resources.qrc
include/: myapp.h
qml/: Main.qml
qml/components/: CustomComponent.qml
src/: main.cpp  myapp.cpp
